# BozoEngine

./: .gitignore  .gitmodules  BozoEngine.sln  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
BozoEngine/: BindGroup.cpp  BindGroup.h  BozoEngine.vcxproj  BozoEngine.vcxproj.filters  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.h  Common.h  Device.cpp  Device.h  GLTF.cpp  GLTF.h  Logging.cpp  Logging.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  Tools.cpp  Tools.h  UIOverlay.cpp  UIOverlay.h  imgui.ini  main.cpp  span.h
BozoEngine/Core/: Device.h  Graphics.h  Pool.h  ResourceManager.h  Window.h
BozoEngine/Rendering/: Camera.cpp  Camera.h  GLTFModel.cpp  GLTFModel.h  GTAO.cpp  GTAO.h  Shadows.cpp  Shadows.h  UIOverlay.cpp  UIOverlay.h
BozoEngine/Shaders/: deferred.frag.hlsl  deferred.vert.hlsl  gtao.frag.hlsl  gtao_blur.frag.hlsl  offscreen.frag.hlsl  offscreen.vert.hlsl  shadowMap.vert.hlsl  skybox.frag.hlsl  skybox.vert.hlsl  uioverlay.frag.hlsl  uioverlay.vert.hlsl
BozoEngine/Vulkan/: VulkanDevice.cpp  VulkanDevice.h  VulkanHelpers.h  VulkanResourceManager.cpp  VulkanResourceManager.h
BozoEngine/assets/ParallaxTest/: rocks.gltf
BozoEngine/assets/Sponza/: source.txt
BozoEngine/shaders/: build_shaders.bat  deferred.frag.glsl  deferred.vert.glsl  offscreen.frag.glsl  offscreen.vert.glsl  shadowMap.frag.glsl  shadowMap.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  triangle.frag.glsl  triangle.vert.glsl  uioverlay.frag.glsl  uioverlay.vert.glsl
